{
    "name": "Josh1Controls 1",
    "maps": [
        {
            "name": "Josh2",
            "id": "ef972eca-79cb-48c1-ae10-62efbddf846a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "84c1e26f-10d0-470f-ba13-745361cee6cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack1",
                    "type": "Button",
                    "id": "0a7e4026-751f-44b0-a1b4-803b64cbc00e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack2",
                    "type": "Button",
                    "id": "2533aed9-6fa4-48bc-abf4-afea2fdd7cf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "c83afea1-c0c3-4da3-a102-4b47f59b4cfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "PassThrough",
                    "id": "edf9e99d-df30-4620-9310-23ab5152e406",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "11ea751c-5259-4462-a8ef-4e7d9eea5f28",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9ea44b8b-f3ec-4596-b7e5-09c1ac014510",
                    "path": "<HID::USB gamepad>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "45ea7017-1f5e-4123-925c-5e869a4d1d02",
                    "path": "<HID::USB gamepad>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "999d4f72-1f2b-47ac-bd43-658022bd40bf",
                    "path": "<HID::USB gamepad>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7122477d-1501-41be-bf5f-b1a0b86b4a4e",
                    "path": "<HID::USB gamepad>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6b7d835-f4cf-4ab1-95b1-0adff97e5d43",
                    "path": "<HID::USB gamepad>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4173e81d-1266-46f8-a530-36b38debd9fa",
                    "path": "<HID::USB gamepad>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}